--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "4                    1408         40.0                9       0   No Failure  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "Target                      0.0     0.00      1.0  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,38 +617,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split \n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0) "
+    "X_columns = X.columns.to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(8000, 8), (2000, 8), (8000,), (2000,)]"
+       "array([[0.33333333, 0.375     , 0.22293364, ..., 0.        , 0.        ,\n",
+       "        1.        ],\n",
+       "       [0.33333333, 0.375     , 0.13969732, ..., 0.        , 1.        ,\n",
+       "        0.        ],\n",
+       "       [0.33333333, 0.375     , 0.19208382, ..., 0.        , 1.        ,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.44444444, 0.375     , 0.27764843, ..., 0.        , 0.        ,\n",
+       "        1.        ],\n",
+       "       [0.44444444, 0.375     , 0.13969732, ..., 1.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.44444444, 0.375     , 0.19324796, ..., 0.        , 0.        ,\n",
+       "        1.        ]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[X_train.shape, X_test.shape, y_train.shape, y_test.shape]"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "X_scaled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(y)\n",
+    "y.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -671,277 +707,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Type\n",
-       "L    6000\n",
-       "M    2997\n",
-       "H    1003\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Type'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>UDI</th>\n",
-       "      <th>Air temperature [K]</th>\n",
-       "      <th>Process temperature [K]</th>\n",
-       "      <th>Rotational speed [rpm]</th>\n",
-       "      <th>Torque [Nm]</th>\n",
-       "      <th>Tool wear [min]</th>\n",
-       "      <th>Target</th>\n",
-       "      <th>Product ID_H29424</th>\n",
-       "      <th>Product ID_H29425</th>\n",
-       "      <th>Product ID_H29432</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Product ID_M24859</th>\n",
-       "      <th>Type_H</th>\n",
-       "      <th>Type_L</th>\n",
-       "      <th>Type_M</th>\n",
-       "      <th>Failure Type_Heat Dissipation Failure</th>\n",
-       "      <th>Failure Type_No Failure</th>\n",
-       "      <th>Failure Type_Overstrain Failure</th>\n",
-       "      <th>Failure Type_Power Failure</th>\n",
-       "      <th>Failure Type_Random Failures</th>\n",
-       "      <th>Failure Type_Tool Wear Failure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>298.1</td>\n",
-       "      <td>308.6</td>\n",
-       "      <td>1551</td>\n",
-       "      <td>42.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>298.2</td>\n",
-       "      <td>308.7</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>46.3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>298.1</td>\n",
-       "      <td>308.5</td>\n",
-       "      <td>1498</td>\n",
-       "      <td>49.4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>298.2</td>\n",
-       "      <td>308.6</td>\n",
-       "      <td>1433</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>298.2</td>\n",
-       "      <td>308.7</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 10016 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   UDI  Air temperature [K]  Process temperature [K]  Rotational speed [rpm]  \\\n",
-       "0    1                298.1                    308.6                    1551   \n",
-       "1    2                298.2                    308.7                    1408   \n",
-       "2    3                298.1                    308.5                    1498   \n",
-       "3    4                298.2                    308.6                    1433   \n",
-       "4    5                298.2                    308.7                    1408   \n",
-       "\n",
-       "   Torque [Nm]  Tool wear [min]  Target  Product ID_H29424  Product ID_H29425  \\\n",
-       "0         42.8                0       0              False              False   \n",
-       "1         46.3                3       0              False              False   \n",
-       "2         49.4                5       0              False              False   \n",
-       "3         39.5                7       0              False              False   \n",
-       "4         40.0                9       0              False              False   \n",
-       "\n",
-       "   Product ID_H29432  ...  Product ID_M24859  Type_H  Type_L  Type_M  \\\n",
-       "0              False  ...              False   False   False    True   \n",
-       "1              False  ...              False   False    True   False   \n",
-       "2              False  ...              False   False    True   False   \n",
-       "3              False  ...              False   False    True   False   \n",
-       "4              False  ...              False   False    True   False   \n",
-       "\n",
-       "   Failure Type_Heat Dissipation Failure  Failure Type_No Failure  \\\n",
-       "0                                  False                     True   \n",
-       "1                                  False                     True   \n",
-       "2                                  False                     True   \n",
-       "3                                  False                     True   \n",
-       "4                                  False                     True   \n",
-       "\n",
-       "   Failure Type_Overstrain Failure  Failure Type_Power Failure  \\\n",
-       "0                            False                       False   \n",
-       "1                            False                       False   \n",
-       "2                            False                       False   \n",
-       "3                            False                       False   \n",
-       "4                            False                       False   \n",
-       "\n",
-       "   Failure Type_Random Failures  Failure Type_Tool Wear Failure  \n",
-       "0                         False                           False  \n",
-       "1                         False                           False  \n",
-       "2                         False                           False  \n",
-       "3                         False                           False  \n",
-       "4                         False                           False  \n",
-       "\n",
-       "[5 rows x 10016 columns]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.get_dummies(df)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
     "from imblearn.over_sampling import SMOTE \n",
-    "sm = SMOTE(sampling_strategy=\"minority\") \n",
-    "X_train_res, y_train_res = sm.fit_resample(X_train, y_train) \n",
-    "  "
+    "sm = SMOTE(sampling_strategy=\"auto\") \n",
+    "X_resampled, y_resampled = sm.fit_resample(X_scaled, y)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2, 3, 4, 5]),\n",
+       " array([ 112, 9652,   78,   95,   18,   45], dtype=int64))"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(y,return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2, 3, 4, 5]),\n",
+       " array([9652, 9652, 9652, 9652, 9652, 9652], dtype=int64))"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(y_resampled,return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(57912, 8)"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_resampled.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(57912,)"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_resampled.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert X and y to pandas DataFrame\n",
+    "X_df = pd.DataFrame(X_resampled, columns=X_columns)\n",
+    "y_df = pd.DataFrame(y_resampled, columns=['Target'])\n",
+    "\n",
+    "# Concatenate X and y along columns\n",
+    "df = pd.concat([X_df, y_df], axis=1)\n",
+    "\n",
+    "# Write DataFrame to CSV file\n",
+    "df.to_csv('processed_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
