--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -12,7 +12,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
