model: save model

--- a/model/train.ipynb
+++ b/model/train.ipynb
@@ -668,6 +668,56 @@
     "# Display predictions\n",
     "print(predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformation Pipeline and Model Successfully Saved\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Pipeline(memory=Memory(location=None),\n",
+       "          steps=[('numerical_imputer',\n",
+       "                  TransformerWrapper(exclude=None,\n",
+       "                                     include=['Air temperature [K]',\n",
+       "                                              'Process temperature [K]',\n",
+       "                                              'Rotational speed [rpm]',\n",
+       "                                              'Torque [Nm]', 'Tool wear [min]',\n",
+       "                                              'Type_H', 'Type_L', 'Type_M'],\n",
+       "                                     transformer=SimpleImputer(add_indicator=False,\n",
+       "                                                               copy=True,\n",
+       "                                                               fill_value=None,\n",
+       "                                                               keep_empty_features=False,\n",
+       "                                                               missing_values=nan,\n",
+       "                                                               st...\n",
+       "                  LGBMClassifier(boosting_type='gbdt', class_weight=None,\n",
+       "                                 colsample_bytree=1.0, importance_type='split',\n",
+       "                                 learning_rate=0.1, max_depth=-1,\n",
+       "                                 min_child_samples=20, min_child_weight=0.001,\n",
+       "                                 min_split_gain=0.0, n_estimators=100, n_jobs=-1,\n",
+       "                                 num_leaves=31, objective=None, random_state=42,\n",
+       "                                 reg_alpha=0.0, reg_lambda=0.0, subsample=1.0,\n",
+       "                                 subsample_for_bin=200000, subsample_freq=0))],\n",
+       "          verbose=False),\n",
+       " 'predictive_maintenance.pkl')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save_model(best_model, 'predictive_maintenance')"
+   ]
   }
  ],
  "metadata": {
