--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "4                    1408         40.0                9       0   No Failure  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "Target                      0.0     0.00      1.0  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "4   No Failure"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "5"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "4           40                9       0       1       0             1  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,17 +1140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_columns = X.columns.to_numpy()\n",
-    "np.savetxt('X_columns.csv', X_columns, delimiter=',', fmt='%s')"
+    "with open(\"columns.txt\",'w') as f:\n",
+    "    f.write(\",\".join(x for x in X_columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1172,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1195,7 @@
        "['scaler.pkl']"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
