--- a/model/train.ipynb
+++ b/model/train.ipynb
@@ -131,6 +131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -201,6 +208,14 @@
     "y_train_resampled = pd.DataFrame(y_train_resampled, columns=['Target'])\n",
     "X_test = pd.DataFrame(X_test, columns=X_columns)\n",
     "y_test = pd.DataFrame(y_test, columns=['Target'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training \n",
+    "Using pycaret to to see performance of different algorithms"
    ]
   },
   {
@@ -655,6 +670,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing with a dummy data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -730,6 +752,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -778,24 +807,6 @@
    "source": [
     "save_model(best_model, 'predictive_maintenance')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.4.2'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
