--- a/model/train.ipynb
+++ b/model/train.ipynb
@@ -167,6 +167,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upsampling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
