--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -1074,32 +1074,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Failure Type\n",
-      "0                1\n",
-      "1                1\n",
-      "2                1\n",
-      "3                1\n",
-      "4                1\n",
-      "...            ...\n",
-      "9995             1\n",
-      "9996             1\n",
-      "9997             1\n",
-      "9998             1\n",
-      "9999             1\n",
-      "\n",
-      "[10000 rows x 1 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Failure Type\n",
+       "1               9652\n",
+       "0                112\n",
+       "3                 95\n",
+       "2                 78\n",
+       "5                 45\n",
+       "4                 18\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(y_df)"
+    "y_df.value_counts()"
    ]
   }
  ],
